overlays/cluster-a/default/eng-flux-ci-demo/eng-flux-ci-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eng-flux-ci-demo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:656627883778:certificate/f229f0da-1fb9-4f19-a8dd-ba048847fd83
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    external-dns.alpha.kubernetes.io/hostname: eng.save-it.co.uk
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

spec:
    rules:
    - host: "eng.save-it.co.uk"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eng-flux-ci-demo
                port:
                  number: 80
